SLVSCODE-1285 Cursor: Mark issues as error